11th commit - added recyclerview to basket fragment and added food items using BasketAdapter and also set the elevation of dropdown menu for location to null and set large heap as true in application tag of AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_takeout_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Takeouts"
+
+        android:largeHeap="true"
+        android:hardwareAccelerated="false"
+
         tools:targetApi="31">
         <activity
             android:name=".ChooseLocationActivity"
@@ -37,6 +41,9 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+
+
     </application>
 
 </manifest>
